0.4.0-beta7 (server-only):
[SERVER]
+ Completely change config file format.

0.4.0-beta6 (server-only):
[SERVER]
+ Add code to update package.json. (If not working, remove AsieLauncher/internal/info.json and try again.)
* Fix JAR repacking.
* Fix many other issues in the preceding hotfixes.

0.4.0-beta5:
[CLIENT]
+ Add logging to file.
/ Change logging format to use Java's Logger
[SERVER]
+ The server now generates the launcher.jar!
+ Major rewrite - server now updates itself! Yes, seriously. It also updates the launcher.
/ Refactor a lot of the code.

0.4.0-beta4:
[CLIENT]
+ Add support for saving session information to remove the need to re-type your password.
+ Add support for no backgrounds and .jpg backgrounds.
[SERVER]
+ You can now also use AsieLauncher/mods-client as a directory.

0.4.0-beta3:
[CLIENT]
+ Fix loading Minecraft 1.6 when server is down
+ Fix path creation on some Windows configurations.
[SERVER]
+ Add custom default JVM arguments in AsieLauncher/config.json
/ WARNING: 1.6.2 libraries are now put in AsieLauncher/libs, and JAR patches are put in AsieLauncher/jarPatches!

0.4.0-beta2:
[SERVER]
* Fix a copypasting mistake.

0.4.0-beta:
- SOLARIS HAS BEEN DEPRECATED!
[CLIENT]
+ Implement Yggdrasil authentication.
+ Add 1.6 Minecraft launcher code.
+ Rewrite JAR repacking to actually work.
+ Automatically download LiteLoader for .litemods.
  (BETA: Requires Forge to work for now)
[SERVER]
+ Lets you dump web server files to a directory: node also -l
+ Show debug messages with -d.

0.3.1:
* Bump config revision to 5.
[CLIENT]
+ Add JAR repacking functionality.
+ Add minecraft.jar downloading functionality (also caches them AsieLauncher-wide).
+ Checks for modpack MC version and quits if unsupported.
/ Refactoring...
[SERVER]
+ Added pretty colors to output.
+ Now sends list of ZIPs to add to minecraft.jar.
+ Sends MC version of the modpack to client.
+ Orders JAR patches in the user-specified order; see jarPatchOrder in server config.